# sdlbase

./: .gitignore  CMakeLists.txt  build.bat  readme
src/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
src/Graphics/: CMakeLists.txt  GLDraw.cpp  GLDraw.h  SDLWindow.cpp  SDLWindow.h  SDL_D3D_Window.cpp  SDL_D3D_Window.h  SDL_GL_Window.cpp  SDL_GL_Window.h
